[package]
name = "planner-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = "*"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.21", features = ["derive"] }
tokio-macros = "2.4.0"
uuid = { version = "1.11.0", features = ["v4", "serde", "rng"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
serde = { version = "1.0.215", features = ["derive"] }
pnet = "0.35.0"
hyper = { version = "1.5.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
futures-channel = "0.3.31"
futures-util = "0.3.31"
futures-macro = "0.3.31"
http-body-util = "0.1.2"
url = "2.5.3"
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
